fix(ui): add missing color names

--- a/frontend/theme/extras/header.less
+++ b/frontend/theme/extras/header.less
@@ -42,7 +42,7 @@
       }
 
       svg {
-        color: #000;
+        color: @theme-color-black;
       }
     }
   }
@@ -53,7 +53,7 @@ body.has-hero-section {
     .header-wrapper {
       .logo {
         svg {
-          color: #fff;
+          color: @theme-color-white;
         }
       }
     }
@@ -70,7 +70,7 @@ body.has-hero-section.section-add {
 
       .logo {
         svg {
-          color: #000;
+          color: @theme-color-black;
         }
       }
     }
@@ -185,7 +185,7 @@ body.has-hero-section.section-add {
         &,
         &::before,
         &::after {
-          background: #000;
+          background: @theme-color-dark-gray;
           border-radius: 0;
           transition: 0.25s ease-in-out;
         }
