--- a/frontend/theme/extras/main.less
+++ b/frontend/theme/extras/main.less
@@ -450,7 +450,7 @@ button.gdpr-privacy-show-banner {
 .ui.form .ui.input input[type='file'],
 .ui.form .ui.input input[type='url'],
 .ui.form textarea {
-  border-color: #000;
+  border-color: @theme-color-black;
 }
 
 .ui.input.editor-link input {
